TemporalPlainTime::toTemporalTimeRecord shouldn't require all properties to be provided https://bugs.webkit.org/show_bug.cgi?id=240394

Reviewed by Yusuke Suzuki and Darin Adler.

Following the spec correction of https://github.com/tc39/proposal-temporal/pull/1862, this patch
fixes our Temporal.PlainTime implementation to require that *one* property be provided, not *all* of them.

* stress/temporal-plaintime.js:
* test262/expectations.yaml: Mark 32 test cases as passing.

* runtime/TemporalDuration.cpp:
(JSC::TemporalDuration::fromDurationLike):
* runtime/TemporalPlainTime.cpp:
(JSC::toTemporalTimeRecord):

Canonical link: https://commits.webkit.org/250543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294176 268f45cc-cd09-0410-ab3c-d52691b4dbfc