Source/JavaScriptCore/runtime/TemporalPlainTime.cpp
@@ -301,6 +301,7 @@ static ISO8601::Duration toTemporalTimeRecord(JSGlobalObject* globalObject, JSOb
     auto scope = DECLARE_THROW_SCOPE(vm);
 
     ISO8601::Duration duration { };
+    auto hasRelevantProperty = false;
     for (TemporalUnit unit : temporalUnitsInTableOrder) {
         if (unit < TemporalUnit::Hour)
             continue;
@@ -308,13 +309,10 @@ static ISO8601::Duration toTemporalTimeRecord(JSGlobalObject* globalObject, JSOb
         JSValue value = temporalTimeLike->get(globalObject, name);
         RETURN_IF_EXCEPTION(scope, { });
 
-        // We are throwing an error here, but probably this is a spec bug.
-        // Tracked in https://github.com/tc39/proposal-temporal/issues/1803.
-        if (value.isUndefined()) {
-            throwTypeError(globalObject, scope, makeString('"', StringView(name.uid()), "\" field is missing"_s));
-            return { };
-        }
+        if (value.isUndefined())
+            continue;
 
+        hasRelevantProperty = true;
         double integer = value.toIntegerOrInfinity(globalObject);
         RETURN_IF_EXCEPTION(scope, { });
         if (!std::isfinite(integer)) {
@@ -323,6 +321,12 @@ static ISO8601::Duration toTemporalTimeRecord(JSGlobalObject* globalObject, JSOb
         }
         duration[unit] = integer;
     }
+
+    if (!hasRelevantProperty) {
+        throwTypeError(globalObject, scope, "Object must contain at least one Temporal time unit property"_s);
+        return { };
+    }
+
     return duration;
 }
 
